fix: ファイルの位置とworkersの追加

--- a/packages/ms-3d-emoji-pic/package.json
+++ b/packages/ms-3d-emoji-pic/package.json
@@ -4,6 +4,7 @@
     "build": "rollup -c"
   },
   "dependencies": {
+    "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
