--- a/packages/ms-3d-emoji-pic/package.json
+++ b/packages/ms-3d-emoji-pic/package.json
@@ -4,6 +4,7 @@
     "build": "rollup -c"
   },
   "dependencies": {
+    "@types/react": "^18.2.20",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -13,10 +14,13 @@
     "@rollup/plugin-typescript": "^11.1.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "add": "^2.0.6",
     "eslint": "^8.47.0",
     "eslint-plugin-react": "^7.33.2",
+    "pnpm": "^8.6.12",
     "rollup": "^3.28.1",
     "rollup-plugin-dts": "^6.0.0",
+    "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2"
   }
 }
