--- a/packages/package.json
+++ b/packages/package.json
@@ -10,17 +10,24 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-typescript": "^11.1.2",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@testing-library/user-event": "^14.4.3",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
+    "@vitejs/plugin-react": "^4.0.4",
     "add": "^2.0.6",
     "eslint": "^8.47.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-react": "^7.33.2",
+    "jsdom": "^22.1.0",
     "pnpm": "^8.6.12",
-    "rollup": "^3.28.1",
-    "rollup-plugin-dts": "^6.0.0",
     "tailwindcss": "^3.3.3",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.3"
   }
 }
