--- a/packages/package.json
+++ b/packages/package.json
@@ -1,4 +1,32 @@
 {
+  "name": "ms-3d-emoji-picker",
+  "version": "0.0.1",
+  "description": "A 3D emoji picker powered by Microsoft's FluentEmoji, designed for use with React.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yajium/microsoft-3d-emoji-picker.git"
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "author": "yajium",
+  "keywords": [
+    "react",
+    "emoji picker",
+    "front-end",
+    "microsoft"
+  ],
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs"
+    }
+  },
+  "license": "MIT",
   "scripts": {
     "lint": "eslint --ext ts,tsx .",
     "build": "rollup -c"
@@ -10,24 +38,26 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-typescript": "^11.1.3",
     "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@testing-library/user-event": "^14.4.3",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
     "@vitejs/plugin-react": "^4.0.4",
-    "add": "^2.0.6",
-    "eslint": "^8.47.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-plugin-react": "^7.33.2",
     "jsdom": "^22.1.0",
     "pnpm": "^8.6.12",
+    "rollup": "^3.28.1",
+    "rollup-plugin-dts": "^6.0.0",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
+    "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vitest": "^0.34.3"
-  }
+  },
+  "files": [
+    "/dist",
+    "LICENSE"
+  ],
+  "type": "module"
 }
