--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -17,8 +17,9 @@
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "declarationDir": "dist",
-    "types": ["vitest/globals"]
+    "types": ["vitest/globals"],
+    "rootDir": "."
   },
-  "include": ["vite.config.js"],
+  "include": ["vite.config.js", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "packages/**/dist/**"]
 }
