--- a/vite/tsconfig.json
+++ b/vite/tsconfig.json
@@ -19,6 +19,6 @@
     "declarationDir": "dist",
     "types": ["vitest/globals"]
   },
-  "include": ["vite.config.js"],
+  "include": ["vite.config.js", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "packages/**/dist/**"]
 }
