--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ms-3d-emoji-picker",
-  "version": "1.0.1",
+  "name": "ms-3d-emoji-picker/repo",
+  "version": "0.0.1",
   "description": "A 3D emoji picker powered by Microsoft's FluentEmoji, designed for use with React.",
   "repository": {
     "type": "git",
@@ -16,15 +16,10 @@
     "front-end",
     "microsoft"
   ],
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.mjs",
-  "types": "dist/index.d.ts",
-  "styles": "styles/index.css",
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ext ts,tsx .",
-    "build": "rollup -c",
-    "build:css": "postcss src/styles/index.css -o styles/index.css"
+    "build": "rollup -c"
   },
   "dependencies": {
     "@types/react": "^18.2.20",
@@ -40,10 +35,8 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
-    "autoprefixer": "^10.4.15",
     "jsdom": "^22.1.0",
     "pnpm": "^8.6.12",
-    "postcss-cli": "^10.1.0",
     "rollup": "^3.28.1",
     "rollup-plugin-dts": "^6.0.0",
     "tailwindcss": "^3.3.3",
@@ -51,16 +44,5 @@
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vitest": "^0.34.3"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "files": [
-    "dist",
-    "styles",
-    "LICENSE",
-    "README.md",
-    "package.json"
-  ]
+  }
 }
