--- a/packages/package.json
+++ b/packages/package.json
@@ -22,6 +22,7 @@
   "styles": "styles/index.css",
   "license": "MIT",
   "scripts": {
+    "test": "vitest run",
     "lint": "eslint --ext ts,tsx .",
     "build": "rollup -c",
     "build:css": "postcss src/styles/index.css -o styles/index.css"
@@ -35,7 +36,6 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-typescript": "^11.1.3",
-    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -49,7 +49,6 @@
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "vite": "^4.4.9",
     "vitest": "^0.34.3"
   },
   "peerDependencies": {
