--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -20,6 +20,6 @@
     "isolatedModules": true,
     "types": ["vitest/globals"]
   },
-  "include": ["src/vitest.config.ts", "src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/__tests__/vitest.setup.ts", "src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["**/tests/**"]
 }
