--- a/packages/package.json
+++ b/packages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms-3d-emoji-picker",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "A 3D emoji picker powered by Microsoft's FluentEmoji, designed for use with React.",
   "repository": {
     "type": "git",
@@ -46,6 +46,7 @@
     "postcss-cli": "^10.1.0",
     "rollup": "^4.0.0",
     "rollup-plugin-dts": "^6.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
