--- a/packages/package.json
+++ b/packages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms-3d-emoji-picker",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A 3D emoji picker powered by Microsoft's FluentEmoji, designed for use with React.",
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "build:css": "postcss src/styles/index.css -o styles/index.css"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.14.0",
     "@types/react": "^18.2.20",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
