--- a/packages/package.json
+++ b/packages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ms-3d-emoji-picker",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A 3D emoji picker powered by Microsoft's FluentEmoji, designed for use with React.",
   "repository": {
     "type": "git",
@@ -24,8 +24,7 @@
   "scripts": {
     "test": "vitest run",
     "lint": "eslint --ext ts,tsx .",
-    "build": "rollup -c",
-    "build:css": "postcss src/styles/index.css -o styles/index.css"
+    "build": "rollup -c"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.14.0",
@@ -48,7 +47,6 @@
     "rollup": "^4.0.0",
     "rollup-plugin-dts": "^6.0.0",
     "rollup-plugin-postcss": "^4.0.2",
-    "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vitest": "^1.0.0"
